gcc/testsuite/g++.dg/diagnostic/pr77949.C
// Ensure that no fix-it hints are emitted
// { dg-options "-fdiagnostics-parseable-fixits" }

/* Very long line, where a missing semicolon would be suggested for
   insertion at column 4097.  */
class test {                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   }   
// { dg-error "0: expected .;. after class definition" "" { target *-*-* } .-1 }
